--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="actuator">Actuator</string>
     <string name="settings">Settings</string>
     <string name="alertDefault">A default alert</string>
-    <string name="welcome">Welcome</string>
+    <string name="welcome">Bienvenue à </string>
 </resources>
