--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="home">Home</string>
-    <string name="actuator">Actuator</string>
-    <string name="settings">Settings</string>
+    <string name="home">Accueil</string>
+    <string name="actuator">Actionneur</string>
+    <string name="settings">Paramètres</string>
     <string name="alertDefault">A default alert</string>
     <string name="welcome">Binevenue à</string>
 </resources>
