--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="home">Accueil</string>
+    <string name="prediction">Prédiction</string>
     <string name="actuator">Actionneur</string>
     <string name="settings">Paramètres</string>
     <string name="alertDefault">Une alerte par défaut</string>
