--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name" translatable="false">IOT</string>
-    <string name="home">Home</string>
+    <string name="home">Home</string>prediction
+    <string name="prediction">Prediction</string>
     <string name="actuator">Actuator</string>
     <string name="settings">Settings</string>
     <string name="alertDefault">A default alert</string>
